avoid accidental double tap zoom on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ html, body {
   overflow-x: hidden;
   position: relative;
   font-family: Helvetica, Arial, sans-serif;
+  /* Avoid accidental double tap zoom on mobile */
+  touch-action: manipulation;
 }
 
 .topbar {
